--- a/Placemem/app/src/main/res/menu/menu_add_mem.xml
+++ b/Placemem/app/src/main/res/menu/menu_add_mem.xml
@@ -1,7 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_new_mem" android:title="New Mem"
-        android:orderInCategory="1" android:showAsAction="always"></item>
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.lesliedahlberg.placemem.AddMemActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
 </menu>
