--- a/Placemem/app/src/main/res/layout/activity_add_mem.xml
+++ b/Placemem/app/src/main/res/layout/activity_add_mem.xml
@@ -2,7 +2,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/backgroundView" tools:context="com.lesliedahlberg.placemem.AddMemActivity">
+        android:id="@+id/backgroundView" tools:context="dva217_grupp1.AddMemActivity">
 
      <FrameLayout
          android:layout_width="fill_parent"
