--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,5 +7,6 @@
         class="android.support.v7.widget.RecyclerView"
         android:id="@+id/recyclerView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        style="@style/recyclerView" />
 </RelativeLayout>
