--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,15 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-    </style>
 
+        <item name="android:textColorPrimary">@color/icons</item>
+        <item name="android:textColorSecondary">@color/icons</item>
+        <item name="android:divider">@color/secondary_text</item>
+    </style>
+    <style name="recyclerView">
+        <item name="android:background">@color/accent</item>
+    </style>
+    <style name="cardViewDescription">
+        <item name="android:background">@color/primary</item>
+    </style>
 </resources>
