--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:padding="16dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" android:padding="16dp"
+    android:orientation="vertical">
     <android.support.v7.widget.CardView android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/cardView">
@@ -71,12 +72,24 @@
                         android:layout_marginLeft="6dp" />
                 </LinearLayout>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Transcript"
-                    android:id="@+id/transcript" />
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content" >
+
+                    <ImageButton
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:id="@+id/showOnMapButton"
+                        android:background="@drawable/ic_show_on_map" />
+
+                    <ImageButton
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:id="@+id/shareButton"
+                        android:background="@drawable/ic_share" />
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
