--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -57,16 +57,16 @@
                         android:layout_weight="1" />
 
                     <ImageButton
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:id="@+id/showOnMapButton"
-                        android:background="@drawable/ic_show_on_map" />
+                        android:src="@drawable/ic_show_on_map" />
 
                     <ImageButton
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:id="@+id/shareButton"
-                        android:background="@drawable/ic_share" />
+                        android:src="@drawable/ic_share" />
                 </LinearLayout>
 
             </LinearLayout>
