--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,8 @@
         <item name="android:background">@color/primary</item>
     </style>
 
+    <style name="imageButton">
+        <item name="android:background">#00ffffff</item>
+    </style>
+
 </resources>
