--- a/app/src/main/res/layout/activity_add_mem.xml
+++ b/app/src/main/res/layout/activity_add_mem.xml
@@ -1,76 +1,58 @@
- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+ <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/backgroundView" tools:context="dva217_grupp1.AddMemActivity">
+        android:id="@+id/backgroundView" tools:context="dva217_grupp1.AddMemActivity"
+        android:orientation="vertical"
+     android:padding="16dp"
+     style="@style/recyclerView">
 
      <FrameLayout
-         android:layout_width="fill_parent"
+         android:layout_width="match_parent"
          android:layout_height="wrap_content"
-         android:layout_alignParentBottom="true"
-         android:layout_alignParentStart="true"
-         android:background="@android:color/background_light">
+         style="@style/cardViewDescription">
 
          <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_alignParentBottom="true"
-             android:layout_centerHorizontal="true"
+             android:layout_height="match_parent"
              android:layout_margin="16dp">
 
-             <LinearLayout
-                 android:orientation="horizontal"
-                 android:layout_width="fill_parent"
-                 android:layout_height="wrap_content">
-
-                 <TextView
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:textAppearance="?android:attr/textAppearanceLarge"
-                     android:text="Location"
-                     android:id="@+id/location"
-                     android:layout_weight="1" />
-
-                 <TextView
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:textAppearance="?android:attr/textAppearanceMedium"
-                     android:text="Date"
-                     android:id="@+id/date"
-                     android:layout_weight="1" />
-
-             </LinearLayout>
-
-             <LinearLayout
-                 android:orientation="horizontal"
-                 android:layout_width="fill_parent"
-                 android:layout_height="wrap_content" >
-
-                 <TextView
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:textAppearance="?android:attr/textAppearanceSmall"
-                     android:text="Lat"
-                     android:id="@+id/gps" />
-
-             </LinearLayout>
+             <ImageView
+                 android:layout_width="200dp"
+                 android:layout_height="200dp"
+                 android:id="@+id/photoView"
+                 android:layout_gravity="center" />
 
              <EditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
-                 android:inputType="textMultiLine"
-                 android:ems="10"
-                 android:id="@+id/transcript" />
+                 android:id="@+id/titleField"
+                 android:hint="Title" />
 
-             <Button
+             <LinearLayout
+                 android:orientation="horizontal"
                  android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:text="Save"
-                 android:id="@+id/button"
-                 android:onClick="save" />
+                 android:layout_height="match_parent">
+
+                 <Button
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:text="Save"
+                     android:id="@+id/saveButton"
+                     android:layout_weight="1"
+                     android:onClick="save" />
+
+                 <Button
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:text="Discard"
+                     android:id="@+id/discardButton"
+                     android:layout_weight="1"
+                     android:onClick="discard" />
+             </LinearLayout>
+
          </LinearLayout>
      </FrameLayout>
-
- </RelativeLayout>
+ </FrameLayout>
 
