--- a/app/src/main/res/menu/menu_trips.xml
+++ b/app/src/main/res/menu/menu_trips.xml
@@ -1,6 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_new_mem" android:title="New Memory"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.lesliedahlberg.placemem.TripsActivity">
+    <item android:id="@+id/action_new_trip" android:title="New Trip"
         android:orderInCategory="1" android:showAsAction="always"
         ></item>
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
