Specified input method action and type

--- a/app/src/main/res/layout/activity_add_mem.xml
+++ b/app/src/main/res/layout/activity_add_mem.xml
@@ -28,6 +28,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/titleField"
+                android:inputType="text"
+                android:imeOptions="actionDone"
                 android:hint="Title" />
 
             <LinearLayout
