--- a/app/src/main/res/layout/trip_card_view.xml
+++ b/app/src/main/res/layout/trip_card_view.xml
@@ -13,20 +13,34 @@
             android:layout_height="wrap_content"
             android:background="@color/primary_dark">
 
-            <FrameLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="16dp"
-                android:id="@+id/titleFrameLayout">
+                android:layout_height="128dp">
 
-                <TextView
+                <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Title"
-                    android:id="@+id/titleField"
-                    android:textSize="48dp" />
-            </FrameLayout>
+                    android:layout_height="match_parent"
+                    android:id="@+id/tripBackgroundImage"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:tint="@color/primary_dark"
+                    android:tintMode="multiply" />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="128dp"
+                    android:padding="16dp"
+                    android:id="@+id/titleFrameLayout">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="Title"
+                        android:id="@+id/titleField"
+                        android:textSize="48dp" />
+                </FrameLayout>
+            </RelativeLayout>
 
             <LinearLayout
                 android:orientation="vertical"
