Added Slideshow functionality v2

--- a/app/src/main/res/layout/trip_card_view.xml
+++ b/app/src/main/res/layout/trip_card_view.xml
@@ -75,6 +75,14 @@
 
                     </LinearLayout>
 
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Slideshow"
+                        android:id="@+id/slideshowButton"
+                        android:layout_weight="1"
+                        android:gravity="center" />
+
                     <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
