--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_new_mem" android:title="New Memory"
-        android:orderInCategory="1" android:showAsAction="always" android:icon="@drawable/ic_new_mem"
-        ></item>
+        android:orderInCategory="1" android:showAsAction="always" android:icon="@drawable/ic_camera"
+        />
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
 </menu>
