--- a/app/src/main/res/layout/activity_trips.xml
+++ b/app/src/main/res/layout/activity_trips.xml
@@ -10,6 +10,6 @@
         android:id="@+id/recyclerView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        style="@style/recyclerView" />
+        style="@style/recyclerViewFrame" />
 
 </RelativeLayout>
