--- a/app/src/main/res/layout/trip_card_view_add_trip.xml
+++ b/app/src/main/res/layout/trip_card_view_add_trip.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical">
     <android.support.v7.widget.CardView android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/cardView">
+        android:id="@+id/cardView"
+        style="@style/cardView">
 
         <LinearLayout
             android:orientation="vertical"
@@ -15,17 +16,16 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="256dp">
+                android:layout_height="256dp"
+                style="@style/cardViewContentView">
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/tripBackgroundImage"
                     android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:tint="@color/primary_dark"
-                    android:tintMode="multiply"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@mipmap/ic_launcher"
+                    style="@style/cardViewContentViewImage" />
 
                 <FrameLayout
                     android:layout_width="match_parent"
