Fast scroll for MemView

--- a/app/src/main/res/layout/activity_mems.xml
+++ b/app/src/main/res/layout/activity_mems.xml
@@ -8,5 +8,6 @@
         android:id="@+id/recyclerView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        style="@style/recyclerViewFrame" />
+        style="@style/recyclerViewFrame"
+        />
 </RelativeLayout>
