--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -15,7 +15,7 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="256dp"
                 android:id="@+id/photoView"
                 android:layout_gravity="center_horizontal"
                 android:adjustViewBounds="false"
