--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -13,13 +13,27 @@
         android:layout_height="wrap_content"
             style="@style/cardViewDescription">
 
-            <ImageView
+            <view
                 android:layout_width="match_parent"
-                android:layout_height="256dp"
-                android:id="@+id/photoView"
-                android:layout_gravity="center_horizontal"
-                android:adjustViewBounds="false"
-                style="@style/cardViewMemContentViewImage" />
+                android:layout_height="wrap_content"
+                class="com.lesliedahlberg.placemem.SquareLayout"
+                android:id="@+id/view" >
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/photoView"
+                        android:layout_gravity="center_horizontal"
+                        android:adjustViewBounds="false"
+                        style="@style/cardViewMemContentViewImage" />
+                </FrameLayout>
+            </view>
+
+
+
 
             <LinearLayout
                 android:orientation="vertical"
