--- a/app/src/main/res/layout/trip_card_view.xml
+++ b/app/src/main/res/layout/trip_card_view.xml
@@ -13,34 +13,47 @@
             android:layout_height="wrap_content"
             style="@style/cardView">
 
-            <RelativeLayout
+            <view
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/card_view_content_height"
-                style="@style/cardViewContentView">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/tripBackgroundImage"
-                    android:adjustViewBounds="false"
-                    style="@style/cardViewContentViewImage" />
-
+                android:layout_height="wrap_content"
+                class="com.lesliedahlberg.placemem.SquareLayout"
+                android:id="@+id/view3">
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="16dp"
-                    android:id="@+id/titleFrameLayout">
+                    android:layout_height="match_parent">
 
-                    <TextView
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="Title"
-                        android:id="@+id/titleField"
-                        android:gravity="center"
-                        android:textStyle="bold" />
+                        style="@style/cardViewContentView">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/tripBackgroundImage"
+                            android:adjustViewBounds="false"
+                            style="@style/cardViewContentViewImage" />
+
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:padding="16dp"
+                            android:id="@+id/titleFrameLayout">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:textAppearance="?android:attr/textAppearanceLarge"
+                                android:text="Title"
+                                android:id="@+id/titleField"
+                                android:gravity="center"
+                                android:textStyle="bold" />
+                        </FrameLayout>
+                    </RelativeLayout>
                 </FrameLayout>
-            </RelativeLayout>
+            </view>
+
+
 
             <LinearLayout
                 android:orientation="vertical"
