--- a/app/src/main/res/layout/trip_card_view_add_trip.xml
+++ b/app/src/main/res/layout/trip_card_view_add_trip.xml
@@ -34,7 +34,7 @@
                             android:layout_height="match_parent"
                             android:id="@+id/tripBackgroundImage"
                             android:adjustViewBounds="true"
-                            android:src="@mipmap/ic_launcher"
+                            android:src="@drawable/ic_archive"
                             style="@style/cardViewContentViewImage" />
 
                         <FrameLayout
