--- a/app/src/main/res/layout/activity_add_trip.xml
+++ b/app/src/main/res/layout/activity_add_trip.xml
@@ -18,6 +18,13 @@
             android:layout_height="match_parent"
             android:layout_margin="16dp">
 
+            <ImageView
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:id="@+id/imageView2"
+                android:layout_gravity="center|bottom"
+                android:src="@drawable/ic_archive" />
+
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
