--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -105,6 +105,14 @@
                         style="@style/imageButton" />
 
                     <ImageButton
+                        style="@style/imageButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/shareVideoButton"
+                        android:src="@drawable/ic_slideshow"
+                        android:layout_gravity="center_vertical" />
+
+                    <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/shareButton"
