--- a/app/src/main/res/layout/activity_share_video.xml
+++ b/app/src/main/res/layout/activity_share_video.xml
@@ -6,10 +6,23 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.lesliedahlberg.placemem.ShareVideoActivity">
 
-    <VideoView
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Preparing video"
+        android:id="@+id/textView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:visibility="visible" />
+
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/videoView"
-        android:layout_alignParentTop="true"
+        android:layout_height="wrap_content"
+        android:text="Share"
+        android:id="@+id/button"
+        android:visibility="gone"
+        android:onClick="shareButtonAction"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
