Complete video integration

--- a/app/src/main/res/menu/menu_select_sharing_mode.xml
+++ b/app/src/main/res/menu/menu_select_sharing_mode.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/shareImage" android:title="Share Image(s)"></item>
-    <item android:id="@+id/shareAudio" android:title="Share Audio"></item>
+    <item android:id="@+id/shareVideo" android:title="Share Video"></item>
 </menu>
